# trip-crew-AI

./: .env_example  .gitignore  FinalOutput.md  README.md  agents.py  pyproject.toml  tasks.py
tool_set/: calculator_tools.py  search_tools.py
